# HighLoad_TP

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  httpd.conf  main.cpp
include/: Config.h  HttpServer.h  Request.h  Response.h  Settings.h  Status.h
src/: HttpServer.cpp  Request.cpp  Response.cpp  Settings.cpp
